Fix dependencies and add gunicorn for Render

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 flask==2.3.3
-werkzeug==2.3.0
 flask-login==0.6.2
 flask-session==0.5.0
 google-auth==2.22.0
+gunicorn
 google-auth-oauthlib==1.0.0
 requests==2.31.0
 python-dotenv==1.0.0
